# s2p-copilot

./: .gitignore  pyproject.toml
.claude/: settings.local.json
backend/app/: main.py
backend/app/db/: neo4j.py
backend/app/domains/s2p/: config.py  factors.py  graph.py  scorer.py
backend/app/framework/: __init__.py  agent.py  audit.py  checkpoint.py  composite_gate.py  convergence_math.py  decision_history.py  economics.py  event_bus.py  feedback_base.py  feedback_store.py  iks_base.py  intervention_controls.py  learning_state.py  narrative_base.py  ols_status.py  provenance.py  shadow_mode.py  similar_cases_base.py
backend/app/routers/: framework_router.py  s2p.py
backend/app/services/: ols_status.py
backend/demo/: s2p_demo.py
backend/tests/: test_framework_discipline.py  test_s2p_config.py  test_s2p_demo.py  test_s2p_factors.py  test_s2p_graph.py  test_s2p_iks.py  test_s2p_outcome.py  test_s2p_score_endpoint.py  test_s2p_scorer.py  test_scaffold.py
