[project]
name = "s2p-copilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "neo4j>=5.0.0",
    "numpy>=1.24.0",
    "graph-attention-engine @ git+https://github.com/ArindamBanerji/graph-attention-engine.git",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio", "httpx"]
